--- a/mern_estate/package.json
+++ b/mern_estate/package.json
@@ -12,7 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mongoose": "^8.19.1",
     "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
+    "@types/node": "^24.8.1"
   }
 }
