--- a/mern_estate/client/package.json
+++ b/mern_estate/client/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.9.2",
     "@supabase/supabase-js": "^2.76.1",
     "@tailwindcss/vite": "^4.1.14",
+    "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
