--- a/mern_estate/client/package.json
+++ b/mern_estate/client/package.json
@@ -13,6 +13,8 @@
     "@reduxjs/toolkit": "^2.9.2",
     "@supabase/supabase-js": "^2.76.1",
     "@tailwindcss/vite": "^4.1.14",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -20,6 +22,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
     "redux-persist": "^6.0.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
