--- a/mern_estate/package.json
+++ b/mern_estate/package.json
@@ -17,7 +17,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.553.0",
     "mongoose": "^8.19.1",
     "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10"
