--- a/mern_estate/package.json
+++ b/mern_estate/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon api/index.js",
-    "start": "node api/index.js"
+    "start": "node api/index.js",
+    "build": "npm run build && npm install --prefix client && npm run build --prefix client"
+    
   },
   "keywords": [],
   "author": "",
